# protobuf-gen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
lib_tests/: Cargo.toml  build.rs
lib_tests/src/: city.rs  convert.rs  lib.rs  person.rs  tree.rs
lib_tests/tests/: integration_tests.rs
protobuf-gen-derive/: Cargo.toml
protobuf-gen-derive/src/: convert.rs  lib.rs
protobuf-gen-extract/: Cargo.toml
protobuf-gen-extract/src/: lib.rs
src/: convert.rs  error.rs  extract.rs  lib.rs  parse.rs  print.rs  printer.rs  types.rs
tests/: integration_tests.rs  text.rs
