[package]
name = "protobuf-gen"
version = "0.5.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
edition = "2021"

[dependencies]
bytes = "1.4.0"
heck = "0.3"
log = "0.4"
prost = "0.11"
prost-build = "0.11"
protobuf-gen-derive = { path = "protobuf-gen-derive" }
protobuf-gen-extract = { path = "protobuf-gen-extract" }
syn = { version = "1.0", features = ["visit"] }
syn_util = "0.4"
thiserror = "1.0.38"

[dev-dependencies]
env_logger = "0.6"
