[package]
name = "lib_tests"
version = "0.1.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
edition = "2018"

[dependencies]
proptest = "0.9"
proptest-derive = "0.1.1"
prost = "0.7.0"
protobuf-gen = { path = ".." }

[build-dependencies]
failure = "0.1"
protobuf-gen = { path = ".." }

[dev-dependencies]
proptest = "0.9"
