[package]
name = "lib_tests"
version = "0.1.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
edition = "2021"

[dependencies]
proptest = "0.9"
proptest-derive = "0.1.1"
prost = "0.11"
protobuf-gen = { path = ".." }

[build-dependencies]
failure = "0.1"
protobuf-gen = { path = ".." }

[dev-dependencies]
eyre = "0.6.8"
proptest = "0.9"
