[package]
name = "protobuf-gen-derive"
version = "0.1.0"
authors = ["Boncheol Gu <boncheol.gu@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
protobuf-gen-extract = { path = "../protobuf-gen-extract" }
quote = "1.0"
syn = { version = "1.0", features = ["visit"] }
syn_util = "0.4"
